# typewriter

./: .flake8  .gitignore  README.md  pyproject.toml
data/0_original/가요/: 10-minutes.txt  100일日째-만남.txt  10년전의-일기를-꺼내어.txt  1234-원투쓰리포.txt  1620-열여섯-스물.txt  180도.txt  1tym.txt  1도-없어.txt  1분-1초-feat-타루.txt  2-different-tears.txt  200.txt  34.txt  4월-이야기-april-story.txt  50년-후의-내모습.txt  7년간의-사랑.txt  8282.txt  9월의-노래.txt  a-better-day.txt  a-yo.txt  abracadabra.txt  addio.txt  againagain.txt  ah.txt  all-i-wanna-do-k-feat-hoody-loco.txt  all-of-my-life.txt  all-right.txt  always.txt  annie.txt  aspirin-아스피린-12-string-guitar-ver.txt  baaam-feat-muzie-of-uv.txt  baby-baby.txt  bad-boy.txt  bad-girl-good-girl.txt  bae-bae.txt  ballerino.txt  be-my-baby.txt  beautiful-girl.txt  beautiful-life.txt  beautiful.txt  black-swan.txt  (+2224 more)
data/0_original/윤동주/: 꿈은 깨어지고.txt  눈.txt  또 다른 고향.txt  무서운 시간.txt  별을 헤는 밤.txt  병원.txt  봄.txt  사랑스런 추억.txt  산협의 오후.txt  새로운 길.txt  서시.txt  소년.txt  쉽게 씨워진 시.txt  십자가.txt  아우의 인상화.txt  자화상.txt  조개껍질.txt  참회록.txt  초 한대.txt  호주머니.txt
data/2_characters/: characters.json  embeddings.json
docs/: char2vec.md
src/: main.py
src/typewriter/: char2vec.py  preprocess.py
src/typewriter/commands/: char2vec.py  preprocess.py  train.py
src/typewriter/datasets/: skip_gram_dataset.py
src/typewriter/tools/: hangul.py
src/typewriter/transforms/: character_index.py  character_to_embeddings.py  compose.py  hangul.py  mark_end.py  onehot.py  skip_gram.py
src/typewriter/usecases/: char2vec.py  characters.py  preprocess.py  train.py  train_generator.py
(+10 files in other folders)
