[tool.poetry]
name = "typewriter"
version = "0.1.0"
readme = "README.md"
description = "Character level text generator"
authors = ["Hoyeong Heo <hotohoto82@gmail.com>"]
packages = [
    { include = "typewriter", from="src" }
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
hgtk = "^0.1.3"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-1.9.0%2Bcpu-cp38-cp38-linux_x86_64.whl"}

[tool.poetry.dev-dependencies]
black = "^21.5b1"
pytest = "^6.2.4"
flake8 = "^3.9.2"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.12.0"
jupyter = "^1.0.0"
pandas = "^1.3.2"
umap-learn = "^0.5.1"
seaborn = "^0.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
preproc = "typewriter.commands.preprocess:run_preprocess"
char2vec = "typewriter.commands.char2vec:run_char2vec"
train = "typewriter.commands.train:run_train"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["typewriter"]

[tool.coverage.report]
show_missing = true
# fail_under = 100

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38']
include = '\.py$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | data
)/
'''
